force-app/main/default/objects/Opportunity/fields/Character_Description__c.field-meta.xml
<CustomField>
    <fullName>Character_Description__c</fullName>
    <label>Character Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>