force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>No benefit</fullName>
            </value>
            <value>
                <fullName>DNQ - Policy</fullName>
            </value>
            <value>
                <fullName>DNQ - contact / credit</fullName>
            </value>
            <value>
                <fullName>DNQ - Servicing</fullName>
            </value>
            <value>
                <fullName>Declined - Policy</fullName>
            </value>
            <value>
                <fullName>Declined - conduct / credit</fullName>
            </value>
            <value>
                <fullName>Declined - Servicing</fullName>
            </value>
            <value>
                <fullName>Low Valuation</fullName>
            </value>
            <value>
                <fullName>Fixed Rate Break Cost</fullName>
            </value>
            <value>
                <fullName>Existing Bank / Broker</fullName>
            </value>
            <value>
                <fullName>Retention Team</fullName>
            </value>
            <value>
                <fullName>Uncontactable</fullName>
            </value>
            <value>
                <fullName>Paid cash</fullName>
            </value>
            <value>
                <fullName>Not proceeding with purchase</fullName>
            </value>
            <value>
                <fullName>Frustration - docs required</fullName>
            </value>
            <value>
                <fullName>Frustration - process</fullName>
            </value>
            <value>
                <fullName>Frustration - VOI</fullName>
            </value>
            <value>
                <fullName>DNQ servicing</fullName>
            </value>
            <value>
                <fullName>DNQ credit score</fullName>
            </value>
            <value>
                <fullName>DNQ probation</fullName>
            </value>
            <value>
                <fullName>DNQ non-homeowner</fullName>
            </value>
            <value>
                <fullName>DNQ other policy</fullName>
            </value>
            <value>
                <fullName>Declined servicing</fullName>
            </value>
            <value>
                <fullName>Declined credit score</fullName>
            </value>
            <value>
                <fullName>Declined Probation</fullName>
            </value>
            <value>
                <fullName>Declined other policy</fullName>
            </value>
            <value>
                <fullName>Other broker</fullName>
            </value>
            <value>
                <fullName>Other lender - interest bearing</fullName>
            </value>
            <value>
                <fullName>Other lender - 0% interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>