force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason Notes</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>