force-app/main/default/objects/Opportunity/fields/Commitment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Fee__c</fullName>
    <label>Commitment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>