force-app/main/default/objects/Opportunity/fields/Commitment_Fee_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Fee_inc_GST__c</fullName>
    <formula>IF( ISPICKVAL(  CF_Type__c  , &quot;Percentage&quot;) ,   CF_Rate_inc_GST__c  *   Loan_Amount__c  ,   CF_Rate_inc_GST__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Fee inc GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>