force-app/main/default/objects/Opportunity/fields/Conduct__c.field-meta.xml
<CustomField>
    <fullName>Conduct__c</fullName>
    <label>Conduct</label>
    <type>TextArea</type>
</CustomField>