force-app/main/default/objects/Opportunity/fields/Confirm_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Settlement_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Settlement Date</label>
    <type>Checkbox</type>
</CustomField>