force-app/main/default/objects/Opportunity/fields/Confirmed_Email_was_correct__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Email_was_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Email was correct</label>
    <type>Checkbox</type>
</CustomField>