force-app/main/default/objects/Opportunity/fields/Connections__c.field-meta.xml
<CustomField>
    <fullName>Connections__c</fullName>
    <formula>Applicant_1__r.PersonContact.Connections_Phone_Mobile_Internet_C__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>