force-app/main/default/objects/Opportunity/fields/Consent_and_Identification_Description__c.field-meta.xml
<CustomField>
    <fullName>Consent_and_Identification_Description__c</fullName>
    <formula>$Label.Consent_and_Identification_Description  + TEXT( Consent_and_Identification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent and Identification</label>
    <type>Text</type>
</CustomField>