force-app/main/default/objects/Opportunity/fields/Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>