force-app/main/default/objects/Opportunity/fields/CPA_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>CPA_Done_Date__c</fullName>
    <label>CPA Done Date</label>
    <type>DateTime</type>
</CustomField>