force-app/main/default/objects/Opportunity/fields/Credit_Card_Limits__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Limits__c</fullName>
    <label>Credit Card Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>