force-app/main/default/objects/Opportunity/fields/Credit_Check_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Description__c</fullName>
    <formula>$Label.Credit_Check_Description  + TEXT( Credit_Check__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Check</label>
    <type>Text</type>
</CustomField>