force-app/main/default/objects/Opportunity/fields/Credit_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contract_Date__c</fullName>
    <label>Credit Contract Date</label>
    <type>DateTime</type>
</CustomField>