force-app/main/default/objects/Opportunity/fields/Credit_Default_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Default_Explanation__c</fullName>
    <label>Credit Default Explanation</label>
    <type>TextArea</type>
</CustomField>