force-app/main/default/objects/Opportunity/fields/Credit_Enquiries_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Enquiries_Explanation__c</fullName>
    <label>Credit Enquiries Explanation</label>
    <type>TextArea</type>
</CustomField>