force-app/main/default/objects/Opportunity/fields/Credit_File__c.field-meta.xml
<CustomField>
    <fullName>Credit_File__c</fullName>
    <label>Credit File</label>
    <type>TextArea</type>
</CustomField>