force-app/main/default/objects/Opportunity/fields/Credit_Guide_Privacy_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Guide_Privacy_Sent_Date__c</fullName>
    <label>Credit Guide &amp; Privacy Sent Date</label>
    <type>Date</type>
</CustomField>