force-app/main/default/objects/Opportunity/fields/Credit_Quote_Executed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Quote_Executed__c</fullName>
    <label>Credit Quote Executed</label>
    <type>Date</type>
</CustomField>