force-app/main/default/objects/Opportunity/fields/Credit_Quote_Fees__c.field-meta.xml
<CustomField>
    <fullName>Credit_Quote_Fees__c</fullName>
    <label>Credit Quote Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commitment Fee</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Service &amp; Commitment Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>