force-app/main/default/objects/Opportunity/fields/Credit_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Quote_Sent__c</fullName>
    <label>Credit Quote Sent</label>
    <type>Date</type>
</CustomField>