force-app/main/default/objects/Opportunity/fields/Credit_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Quote_Status__c</fullName>
    <label>Credit Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Executed &amp; recived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>