force-app/main/default/objects/Opportunity/fields/Customer_Receptivity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Receptivity__c</fullName>
    <label>Customer Receptivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open and warm</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Guarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>