force-app/main/default/objects/Opportunity/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response-Disclosure Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>