force-app/main/default/objects/Opportunity/fields/Customer_Response_SQ_Commision__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_SQ_Commision__c</fullName>
    <label>Customer Response-SQ Commision</label>
    <type>TextArea</type>
</CustomField>