force-app/main/default/objects/Opportunity/fields/Customer_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>