force-app/main/default/objects/Opportunity/fields/Customer_Support_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Person_Name__c</fullName>
    <formula>Customer_Support_Person__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Support Person Name</label>
    <type>Text</type>
</CustomField>