force-app/main/default/objects/Opportunity/fields/Date_HLHC_Offered__c.field-meta.xml
<CustomField>
    <fullName>Date_HLHC_Offered__c</fullName>
    <label>Date HLHC Offered</label>
    <type>Date</type>
</CustomField>