force-app/main/default/objects/Opportunity/fields/Debt_to_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Income_Ratio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debt to Income Ratio</label>
    <type>Checkbox</type>
</CustomField>