force-app/main/default/objects/Opportunity/fields/Discharge__c.field-meta.xml
<CustomField>
    <fullName>Discharge__c</fullName>
    <label>Discharge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sent to client</fullName>
            </value>
            <value>
                <fullName>Executed &amp; received from client</fullName>
            </value>
            <value>
                <fullName>Sent to outgoing</fullName>
            </value>
            <value>
                <fullName>Sent to incoming lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>