force-app/main/default/objects/Opportunity/fields/Disclosure_Statement_Read_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Read_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You must read the disclosure statement to the client before providing credit assistance.</inlineHelpText>
    <label>Disclosure Statement Read to Client</label>
    <type>Checkbox</type>
</CustomField>