force-app/main/default/objects/Opportunity/fields/Disclosure_Statement_Read_to_client_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Read_to_client_Date__c</fullName>
    <label>Disclosure Statement Read to client Date</label>
    <type>Date</type>
</CustomField>