force-app/main/default/objects/Opportunity/fields/Do_not_contact__c.field-meta.xml
<CustomField>
    <fullName>Do_not_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not contact</label>
    <type>Checkbox</type>
</CustomField>