force-app/main/default/objects/Opportunity/fields/Do_you_both_live_at_the_same_address__c.field-meta.xml
<CustomField>
    <fullName>Do_you_both_live_at_the_same_address__c</fullName>
    <label>Do_you_both_live_at_the_same_address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>