force-app/main/default/objects/Opportunity/fields/Do_you_have_a_fixed_term_in_mind__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_fixed_term_in_mind__c</fullName>
    <label>Do you have a fixed term in mind?</label>
    <length>5</length>
    <type>Text</type>
</CustomField>