force-app/main/default/objects/Opportunity/fields/Docs_Last_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Docs_Last_Uploaded__c</fullName>
    <label>Docs Last Uploaded</label>
    <type>DateTime</type>
</CustomField>