force-app/main/default/objects/Opportunity/fields/Docs_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Docs_Outstanding__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Docs Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>