force-app/main/default/objects/Opportunity/fields/Document_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Redirect_URL__c</fullName>
    <label>Document Redirect URL</label>
    <type>Url</type>
</CustomField>