force-app/main/default/objects/Opportunity/fields/Documents_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Documents_Outstanding__c</fullName>
    <description>Documents Outstanding</description>
    <label>Documents Outstanding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>