force-app/main/default/objects/Opportunity/fields/Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received__c</fullName>
    <description>list of Documents Received</description>
    <label>Documents Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>