force-app/main/default/objects/Opportunity/fields/Education_Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Education_Living_Expenses__c</fullName>
    <formula>Applicant_1__r.PersonContact.Education_ChildCare_SchoolFees_Uniform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>