force-app/main/default/objects/Opportunity/fields/Electronic_Communication_Description__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Communication_Description__c</fullName>
    <formula>$Label.Electronic_Communication_Description + TEXT( Electronic_Communication__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electronic Communication</label>
    <type>Text</type>
</CustomField>