force-app/main/default/objects/Opportunity/fields/Email_Opt_Opt__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Opt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Opt</label>
    <type>Checkbox</type>
</CustomField>