force-app/main/default/objects/Opportunity/fields/Entertainment_Dining_Out_Movies_Gift__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Dining_Out_Movies_Gift__c</fullName>
    <formula>Applicant_1__r.PersonContact.Entertainment_Dining_Out_Movies_Gift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entertainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>