force-app/main/default/objects/Opportunity/fields/Equifax_URL__c.field-meta.xml
<CustomField>
    <fullName>Equifax_URL__c</fullName>
    <label>Equifax URL</label>
    <type>Url</type>
</CustomField>