force-app/main/default/objects/Opportunity/fields/Estimated_Age__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age__c</fullName>
    <label>Estimated Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-30</fullName>
            </value>
            <value>
                <fullName>30-40</fullName>
            </value>
            <value>
                <fullName>40-50</fullName>
            </value>
            <value>
                <fullName>50-60</fullName>
            </value>
            <value>
                <fullName>60+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>