force-app/main/default/objects/Opportunity/fields/Expect_to_remain_in_the_credit_contract__c.field-meta.xml
<CustomField>
    <fullName>Expect_to_remain_in_the_credit_contract__c</fullName>
    <label>Expect to remain in the credit contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 2 years</fullName>
            </value>
            <value>
                <fullName>2 to 5 years</fullName>
            </value>
            <value>
                <fullName>5 to 10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>