force-app/main/default/objects/Opportunity/fields/External_Referrer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer_First_Name__c</fullName>
    <formula>ReferredByContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Referrer First Name</label>
    <type>Text</type>
</CustomField>