force-app/main/default/objects/Opportunity/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>