force-app/main/default/objects/Opportunity/fields/Finance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Due_Date__c</fullName>
    <label>Finance Due Date</label>
    <type>Date</type>
</CustomField>