force-app/main/default/objects/Opportunity/fields/Finance_Due_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Finance_Due_In_Days__c</fullName>
    <formula>IF( ISBLANK(Finance_Due_Date__c)= TRUE , null , IF(AND( ISPICKVAL(StageName,&quot;Conditionally Approved&quot;) , ISPICKVAL( Finance_Due_Type__c ,&quot;Conditional&quot;) ) , null , Finance_Due_Date__c - TODAY() ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Due In (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>