force-app/main/default/objects/Opportunity/fields/Finance_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Due_Type__c</fullName>
    <label>Finance Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Unconditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>