force-app/main/default/objects/Opportunity/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <length>250</length>
    <type>Text</type>
</CustomField>