force-app/main/default/objects/Opportunity/fields/Fixed_Term_Preference__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Term_Preference__c</fullName>
    <label>Fixed Term Preference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>