force-app/main/default/objects/Opportunity/fields/Flag_temp__c.field-meta.xml
<CustomField>
    <fullName>Flag_temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag_temp</label>
    <type>Checkbox</type>
</CustomField>