force-app/main/default/objects/Opportunity/fields/Food_Groceries_Meat_Fruit_Vegetables__c.field-meta.xml
<CustomField>
    <fullName>Food_Groceries_Meat_Fruit_Vegetables__c</fullName>
    <formula>Applicant_1__r.PersonContact.Food_Groceries_Meat_Fruit_Vegetabl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>