force-app/main/default/objects/Opportunity/fields/Funding_Variation_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Variation_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Variation Request</label>
    <type>Checkbox</type>
</CustomField>