force-app/main/default/objects/Opportunity/fields/Gambling_Betting_and_Lottery__c.field-meta.xml
<CustomField>
    <fullName>Gambling_Betting_and_Lottery__c</fullName>
    <formula>Applicant_1__r.PersonContact.Gambling_Betting_and_Lottery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gambling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>