force-app/main/default/objects/Opportunity/fields/Government_Charges__c.field-meta.xml
<CustomField>
    <fullName>Government_Charges__c</fullName>
    <label>Government Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>