force-app/main/default/objects/Opportunity/fields/Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Income__c</fullName>
    <formula>Applicant_1_Income_before_tax__c + Applicant_2_Income_before_tax__c + Annual_Rent__c + Tax_Free_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>